--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/ecmarkup": "^3.4.3",
     "@types/node": "^20.14.5",
+    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
@@ -30,6 +32,7 @@
     "prettier": "^3.2.5",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
+    "vue-router": "^4.5.0",
     "vue-tsc": "^2.0.21"
   }
 }
